fix fonts, fix overflow hidden error

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -19,8 +19,8 @@
     }
 
     @media screen and (max-width: 675px) {
-      height: 145px;
-      margin: 40px;
+      height: 18vh;
+      margin: 5vh;
     }
 
     & > img {
